# BitQuanGUI

./: .gitignore  App.tsx  README-DEV.md  README-TAURI.md  README.md  dev.sh  index.css  index.html  package-lock.json  package.json  tailwind.config.js  types.ts  vite.config.ts
.github/workflows/: codeql-analysis.yml  health-check.yml  performance-analysis.yml
components/: Card.tsx  ToggleSwitch.tsx
components/icons/: index.tsx
pages/: AlertsPage.tsx  DashboardPage.tsx  HalvingPage.tsx  RigsPage.tsx  SettingsPage.tsx  StatisticsPage.tsx
src/: WalletPage.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/ts/examples/: basic_usage.ts
src-tauri/bindings/ts/src/: client.ts  errors.ts  index.ts  transaction.ts  types.ts  wallet.ts
src-tauri/crates/bitquan-sdk/: Cargo.toml
src-tauri/crates/bitquan-sdk/src/: client.rs  crypto.rs  error.rs  lib.rs  transaction.rs  types.rs  wallet.rs
src-tauri/examples/: basic_usage.rs
src-tauri/src/: commands.rs  main.rs
src/api/: wallet.ts
src/pages/: WalletPage.tsx
