[package]
name = "bitquan-wallet"
version = "0.1.0"
description = "BitQuan PQC Wallet"
authors = ["BitQuan Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
tauri = { version = "1.0", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
rand = "0.8"
zeroize = "1.5"
secrecy = "0.8"

# Local crates
bitquan-sdk = { path = "crates/bitquan-sdk" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
