[package]
name = "bitquan-sdk"
version = "0.1.0"
edition = "2021"
description = "BitQuan Blockchain SDK"
authors = ["BitQuan Team"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
hex = "0.4"
rand = "0.8"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"

# Local BitQuan crates - commented out for now
# bitquan-types = { path = "/Users/alphab/BitQuan/crates/types" }
# bq-crypto = { path = "/Users/alphab/BitQuan/crates/crypto" }
# wallet = { path = "/Users/alphab/BitQuan/crates/wallet" }

[dev-dependencies]
tokio-test = "0.4"
